<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bg">

    <ImageView
        android:id="@+id/ivSplashLogo"
        android:layout_width="260dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:alpha="0"
        android:contentDescription="@string/app_logo_description"
        android:scaleType="fitCenter"
        android:src="@drawable/keeper_eye_logo"
        app:layout_constraintBottom_toTopOf="@id/tvSplashName"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvSplashName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/text_primary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvSplashSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSplashLogo" />

    <TextView
        android:id="@+id/tvSplashSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:text="@string/app_subtitle"
        android:textColor="@color/accent_light_violet"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSplashName" />

</androidx.constraintlayout.widget.ConstraintLayout>
